--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <input class="form-control" type="text" name="" id="city">
           </div>
           <div class="form-group">
-            <label for="state">State</label>
-            <input class="form-control" type="text" name="" id="state">
+            <label for="state">Country</label>
+            <input class="form-control" type="text" name="" id="country">
           </div>
         </from>
       </div>
