--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/spacelab/bootstrap.min.css">
   <title>WeatherJS</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-6 mx-auto text-center bg-primary mt-5 p-5 rounded">
         <h1 id="w-location"></h1>
-        <h3 id="w-desc">test</h3>
+        <h3 class="text-light" id="w-desc">test</h3>
         <h3 id="w-string"></h3>
         <img id="w-icon">
         <ul id="w-details" class="list-group mt-3">
